--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/python_qt_binding
-	previous = 
-	base = 918ef2fc0ecd
+	previous = 918ef2fc0ecd
+	base = aa38f2196223
 	trim = 
 	trimbase = 
