--- a/patches.conf
+++ b/patches.conf
@@ -1,5 +1,5 @@
 [patches]
-	parent = release/rolling/python_qt_binding
+	parent = release/rolling/python_qt_binding/2.1.1-2
 	previous = 918ef2fc0ecd
 	base = e6011e99679c
 	trim = 
